--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
     "regenerator-runtime": "^0.12.0",
+    "stellar-base": "^0.7.8",
     "stellar-sdk": "^0.8.2"
   },
   "scripts": {
